Cleanup (#61)
* cleanup